SP2-1783: Fix subject details bar padding spacing

--- a/assets/scss/components/_subject-details-bar.scss
+++ b/assets/scss/components/_subject-details-bar.scss
@@ -1,5 +1,5 @@
 .subject-details-bar {
-  padding-top: govuk-spacing(3);
+  padding-top: govuk-spacing(5);
 
   & {
     * {
